--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
 html {
-  font-family: 'Abhaya Libre', serif;
+  font-family: "Abhaya Libre", serif;
+  color: #fff;
+}
+
+header {
+  background-color: #423ca3;
+}
+
+a {
+  color: #fff;
+}
+
+.btn {
+  background-color: #15114c;
+  border: 3px solid #15114c;
 }
